# Canvas-Motion-API

./: .gitignore  README.md  canvas_parser.py  package.toml  pyproject.toml  scratchpad.py  workspaces.json
API Actions/: List-Workspaces.py
Canvas/: events.py
Config/: globals.py
ICS Parsing/: canvas_parser.py
ICS Parsing/canvas_modules/: classre.py  events.py
Motion/: list_workspaces
Motion_Canvas_API_Sync/Canvas/: events.py
Motion_Canvas_API_Sync/Config/: global.py.bak
Motion_Canvas_API_Sync/Motion/: list_workspaces  list_workspaces.py  motion_secrets.py.bak  priority.py  projects.py  secrets.py.bak  settings.py  tasks.py  workspaces.py
Schemas/: ListTasks.json  Task.json  TaskPatch.json  TaskPost.json  User.json  swagger.json
Scratch Crap/: DateTime-withTimezone.py
Scratch Crap/Create Task/: Create-Task.py  create-task-response.json  create-task.json
Scratch Crap/ICS Parsing/: Canvas.ics  Class Code Parser.py  ICS Parsing.py  Parsed Loop Information.txt
